fix: add gap between main-layout and language-switcher

--- a/src/5-objects/_main-layout.scss
+++ b/src/5-objects/_main-layout.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 4rem;
-  padding: var(--g-main-layout-padding);
+  padding: 5rem var(--g-main-layout-padding);
 
   @media screen and (min-width: 768px) {
     display: grid;
